--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -189,7 +189,7 @@
     <bool name="config_disableMenuKeyInLockScreen">true</bool>
 
     <!-- Disable the home key unlock setting -->
-    <bool name="config_disableHomeUnlockSetting">false</bool>
+    <!-- <bool name="config_disableHomeUnlockSetting">false</bool> -->
 
     <!-- Hardware 'face' keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
@@ -204,5 +204,5 @@
     <!-- <integer name="config_deviceHardwareKeys">7</integer> -->
 
     <!-- Boolean to enable stk functionality on Samsung phones -->
-    <bool name="config_samsung_stk">true</bool>
+    <!-- <bool name="config_samsung_stk">true</bool> -->
 </resources>
